--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,14 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# .NET Core build folders
+bin/
+obj/
+.idea/
+
+# Common node modules locations
+/node_modules
+/wwwroot/node_modules
+
+# End of https://mrkandreev.name/snippets/gitignore-generator/#DotnetCore
